--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
+	<link rel="shortcut icon" href="http://sstatic.net/so/favicon.ico">
     
     
 <meta name="description" content="DRL is a reputed refractory company. The company, being one of the leading manufacturers of refractories in the country, ensures that everything at its plant follows an extremely stringent quality policy.">
