--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     
 <meta name="description" content="DRL is a reputed refractory company. The company, being one of the leading manufacturers of refractories in the country, ensures that everything at its plant follows an extremely stringent quality policy.">
 <meta name="keywords" content="refractory bricks, refractory plant, refractories in india, Refractory company">
-<link rel="stylesheet" type="text/css" href="./Refractory Company &amp; Manufacturing Plant _ Refractories in India_files/style.css">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -283,9 +282,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-galleryery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.JPG" data-galleryery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
               </div>
               <div class="portfolio-info">
