--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1 class="text-light"> <a href="index.html"><img src="AVR%20LOGO.png" alt="" class="img-fluid" ><span>Aathi Vinayaga Refractory</span></a></h1>
+        <h1 class="text-light"> <a href="index.html"><img src="AVR%20LOGO.png" alt="" class="img-fluid" ><span>Aathi Vinayaga Refractories</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
        
       </div>
