--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
 <meta name="description" content="DRL is a reputed refractory company. The company, being one of the leading manufacturers of refractories in the country, ensures that everything at its plant follows an extremely stringent quality policy.">
 <meta name="keywords" content="refractory bricks, refractory plant, refractories in india, Refractory company">
+<meta name="google-site-verification" content="aGVdGNWAS-8s9CHGaP92ZoND6xyRhxcJKbYgy1tk3bk" />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
