--- a/index.html
+++ b/index.html
@@ -640,7 +640,20 @@
               <strong>GST:</strong> 33ABYPE2073Q1Z2<br>
             </p>
           </div>
-
+		
+		
+          <div class="col-lg-3 col-md-6 footer-contact">
+            <h3>Aathi Vinayaga Refractory</h3>
+             <p>184, Aladi Road,<br>
+                Cuddalore Dist,Virudhachalam<br>,
+                Tamil Nadu 606001<br>
+                India<br><br>
+              <strong>Phone:</strong>+91 9566802585<br>
+              <strong>Email:</strong>aathivinayaga2020@gmail.com<br>
+              <strong>GST:</strong> 33ABYPE2073Q1Z2<br>
+            </p>
+          </div>
+		
         <!--  <div class="col-lg-3 col-md-6 footer-links">  
             <h4>Useful Links</h4>
             <ul>
