--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Aathi Vinayaga Refractory</h3>
+            <h3>Office Address</h3>
              <p>No. 65/21, Anna Complex<br>
                 Vellore Main Rd<br> Arcot,
                 Tamil Nadu 632503<br>
@@ -668,7 +668,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		
 		
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Aathi Vinayaga Refractory</h3>
+            <h3>Factory Address</h3>
              <p>184, Aladi Road,<br>
                 Cuddalore Dist,Virudhachalam<br>,
                 Tamil Nadu 606001<br>
