--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <meta name="description" content="DRL is a reputed refractory company. The company, being one of the leading manufacturers of refractories in the country, ensures that everything at its plant follows an extremely stringent quality policy.">
 <meta name="keywords" content="refractory bricks, refractory plant, refractories in india, Refractory company">
 <meta name="google-site-verification" content="aGVdGNWAS-8s9CHGaP92ZoND6xyRhxcJKbYgy1tk3bk" />
+	
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
@@ -140,7 +145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="assets/img/portfolio/portfolio-4.jpg" alt="Los Angeles" style="width:100%;">
+        <img src="assets/img/portfolio/portfolio-2.jpg" alt="Los Angeles" style="width:100%;">
       </div>
 
       <div class="item">
@@ -148,7 +153,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
     
       <div class="item">
-        <img src="assets/img/portfolio/portfolio-2.jpg" alt="New york" style="width:100%;">
+        <img src="assets/img/portfolio/portfolio-4.jpg" alt="New york" style="width:100%;">
       </div>
     </div>
 
