--- a/index.html
+++ b/index.html
@@ -715,6 +715,44 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </p>
           </div>
 		
+				
+          <div class="col-lg-3 col-md-6 footer-contact">
+            <h3>Aathi Vinayaga Refractory</h3>
+             <p>184, Aladi Road,<br>
+                Cuddalore Dist,Virudhachalam<br>,
+                Tamil Nadu 606001<br>
+                India<br><br>
+              
+            </p>
+          </div>
+		 
+		<div class="col-lg-3 col-md-6 footer-contact">
+		
+		<a  target="_blank" title="Contact Us On WhatsApp" href="https://web.whatsapp.com/send?phone=+919566802585&amp;text=Hi, I would like to get more information.." class="whatsapplink hidemobile" style="background-color:#2DC100">
+    <i class="fa fa-fw fa-whatsapp" style="color:#fff"></i>
+    <span style="color:#fff">
+        Contact Us On WhatsApp        </span>
+</a>
+<a  target="_blank" title="Contact Us On WhatsApp" href="https://api.whatsapp.com/send?phone=+919566802585&text=Hi,%20I%20would%20like%20to%20get%20more%20information.." class="whatsapplink hideweb" style="background-color:#2DC100">
+    <i class="fa fa-fw fa-whatsapp" style="color:#fff"></i>
+    <span style="color:#fff">
+        Contact Us On WhatsApp        </span>
+</a>
+
+   <script type="text/javascript"> 
+var mobile = (/iphone|ipod|android|blackberry|mini|windows\sce|palm/i.test(navigator.userAgent.toLowerCase()));  
+if (mobile) { 
+
+    $('.hidemobile').css('display', 'none'); // OR you can use $('.hidemobile').hide();
+} 
+else 
+{ 
+    $('.hideweb').css('display', 'none'); // OR you can use $('.hideweb').hide();
+}
+</script>
+	
+	
+			
         <!--  <div class="col-lg-3 col-md-6 footer-links">  
             <h4>Useful Links</h4>
             <ul>
