--- a/index.html
+++ b/index.html
@@ -746,8 +746,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
               <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-		
-		    <a  target="_blank" title="WhatsApp" href="https://web.whatsapp.com/send?phone=+919566802585&amp;text=Hi, I would like to get more information.." class="whatsapplink hidemobile" style="background-color:#2DC100">
+	<a  target="_blank" title="WhatsApp" href="https://web.whatsapp.com/send?phone=+919566802585&amp;text=Hi, I would like to get more information.." class="whatsapplink hidemobile" style="background-color:#2DC100">
     <i class="bx bxl-whatsapp" style="color:#fff"></i>
    
 <a  target="_blank" title="WhatsApp" href="https://api.whatsapp.com/send?phone=+919566802585&text=Hi,%20I%20would%20like%20to%20get%20more%20information.." class="whatsapplink hideweb" style="background-color:#2DC100">
@@ -769,7 +768,6 @@ else
             </div>
           </div>
 
-		
         </div>
       </div>
     </div>
@@ -780,7 +778,7 @@ else
       </div>
       <div class="credits">
       
-        Designed by <a href="http://starwalt.in/">Starwalt</a>
+        Designed by <a href="http://starwalt.github.io/">Starwalt Company</a>
       </div>
     </div>
   </footer><!-- End Footer -->
