--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
          <li><a class="nav-link scrollto" href="#product">Product</a></li>
             <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+		<li><a class="nav-link scrollto" href="#client">Client</a></li>
 <!--          <li><a class="nav-link scrollto" href="#team">Team</a></li>-->
          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
