--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   gtag('config', 'G-GGD66ZH1R0');
 </script>
 	
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3713463745495645"
+     crossorigin="anonymous"></script>
 	
 </head>
 
