--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <label for="name">Subject</label>
+                <label for="name">scject</label>
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
               </div>
               <div class="form-group mt-3">
@@ -683,7 +683,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <h4>Join Our Newsletter</h4>
             
             <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
+              
+		    <a href="mailto:starwaltcompany@gmail.com?subject=Subject Using Mailto.co.uk&body=Email Using Mailto.co.uk">Subscribee</a>
             </form>
           </div>
         </div>
